--- a/TutorContact.html
+++ b/TutorContact.html
@@ -11,8 +11,7 @@
         content="ติวเตอร์ Discrete Math, ติวเตอร์ Discrete, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
   <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
 
-  <!-- Open Graph -->
-  <meta property="og:type"        content="profile" />
+    <meta property="og:type"        content="profile" />
   <meta property="og:locale"      content="th_TH" />
   <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
   <meta property="og:title"       content="ปพนธีร์ แย้มโชติ - ติวเตอร์ Discrete Math & Algorithms" />
@@ -21,14 +20,12 @@
                                             หากคุณกำลังมองหา ติวเตอร์ Discrete Math ที่เข้าใจทั้งทฤษฎีและการประยุกต์จริง หรือกำลังเตรียมสอบวิชาคอมพิวเตอร์ เช่น Algorithms,…">
   <meta property="og:image"       content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card"        content="summary_large_image" />
+    <meta name="twitter:card"        content="summary_large_image" />
   <meta name="twitter:title"       content="ติวเตอร์ Discrete Math & Algorithms | เต้ย Yamchote" />
   <meta name="twitter:description" content="เรียนวิชาคอมฯ และคณิตฯ ขั้นมหาวิทยาลัยกับติวเตอร์มากประสบการณ์ในกรุงเทพฯ" />
   <meta name="twitter:image"       content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
 
-  <!-- Structured Data -->
-  <script type="application/ld+json">
+    <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
@@ -53,8 +50,7 @@
   }
   </script>
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/plugins/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/font/flaticon.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -120,39 +116,38 @@
         <div class="container">
             <div class="card" style="background: #232323; border-radius: 1rem; padding: 2.5rem; border: none; box-shadow: 0 2px 16px rgba(0,0,0,0.15);">
                 <h2 style="color: #ff5252; margin-bottom: 1.2rem;">ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย</h2>
-                <h4 style="color: #ffd700; margin-bottom: 1.5rem;">ติวเตอร์มหาวิทยาลัย – ผู้เชี่ยวชาญ Discrete Mathematics, Data Structures, Algorithms และ Programming (Python, Java, C)</h4>
+                <h4 style="color: #ffd700; margin-bottom: 1.5rem;">ติวเตอร์มหาวิทยาลัย – ถนัดในการสอน Discrete Mathematics, Data Structures, Algorithms และ Programming (Python, Java, C)</h4>
                 <p style="margin-bottom: 1.5rem;">
-                    หากคุณกำลังมองหา <b>ติวเตอร์ Discrete Math</b> ที่เข้าใจทั้งทฤษฎีและการประยุกต์จริง หรือกำลังเตรียมสอบวิชาคอมพิวเตอร์ เช่น <b>Algorithms, Data Structures, Programming</b> — ผมคือผู้เชี่ยวชาญที่สามารถช่วยคุณเข้าใจแนวคิดเหล่านี้ได้อย่างลึกซึ้ง
+                    หากกำลังมองหา ติวเตอร์ Discrete Math ที่ช่วยให้เข้าใจทั้งทฤษฎีและการประยุกต์ใช้จริง หรือกำลังเตรียมสอบวิชาคอมพิวเตอร์ที่สำคัญอย่าง Algorithms, Data Structures, Programming — ปพนธีร์ แย้มโชติ พร้อมช่วยให้ผู้เรียนก้าวข้ามความท้าทายและเข้าใจแนวคิดเหล่านี้ได้อย่างลึกซึ้ง
                 </p>
                 <ul style="margin-bottom: 2rem; line-height: 2;">
-                    <li>👨‍🏫 <b>ประสบการณ์ติวเตอร์มหาวิทยาลัย</b> มากกว่า 10 ปี (ตั้งแต่ปี 2554)</li>
-                    <li>สอนทั้งนักเรียนมัธยม นักศึกษาปริญญาตรีและโท ในสถาบันชั้นนำทั้งในไทยและต่างประเทศ เช่น Mahidol, Chulalongkorn, KMITL, ICT Mahidol, CU Engineering, University of Oxford, University of Toronto, Imperial College London, Stanford University</li>
+                    <li>👨‍🏫 ประสบการณ์ติวเตอร์ระดับมหาวิทยาลัย มากกว่า 10 ปี (เริ่มตั้งแต่ปี 2554)</li>
+                    <li>สอนทั้งนักเรียนมัธยม นักศึกษาปริญญาตรีและโท จากสถาบันชั้นนำทั้งในและต่างประเทศ เช่น Mahidol University, Chulalongkorn University, KMITL, ICT Mahidol, CU Engineering, University of Oxford, University of Toronto, Imperial College London, Stanford University</li>
                 </ul>
-                <h5 style="color: #4dd0e1; margin-bottom: 1rem;">🧠 รายวิชาที่สอนอย่างต่อเนื่อง</h5>
+                <h5 style="color: #4dd0e1; margin-bottom: 1rem;">🧠 รายวิชาที่สอนเป็นประจำ</h5>
                 <ul style="margin-bottom: 2rem; line-height: 2;">
-                    <li><b>Discrete Mathematics / Discrete Structures / ดีสครีต</b></li>
-                    <li><b>Algorithms / Algorithm Design and Analysis / อัลกอริทึม</b></li>
-                    <li><b>Data Structures / ดาต้าสตรัคเจอร์</b></li>
-                    <li><b>Programming (Python / Java / C) / เขียนโปรแกรม</b></li>
-                    <li><b>AI / Machine Learning / Data Science / Data Analysis</b></li>
+                    <li>Discrete Mathematics / Discrete Structures / ดีสครีต</li>
+                    <li>Algorithms / Algorithm Design and Analysis / อัลกอริทึม</li>
+                    <li>Data Structures / ดาต้าสตรัคเจอร์</li>
+                    <li>Programming (Python / Java / C) / เขียนโปรแกรม</li>
+                    <li>AI / Machine Learning / Data Science / Data Analysis</li>
                     <li>คณิตศาสตร์: Calculus, Linear Algebra, Probability, Statistics, Numerical Methods</li>
                 </ul>
-                <h5 style="color: #4dd0e1; margin-bottom: 1rem;">🎓 การศึกษา</h5>
+                <h5 style="color: #4dd0e1; margin-bottom: 1rem;">🎓 ประวัติการศึกษา</h5>
                 <ul style="margin-bottom: 2rem; line-height: 2;">
                     <li>ปริญญาตรีและโท คณิตศาสตร์ (เกียรตินิยม) จากจุฬาลงกรณ์มหาวิทยาลัย</li>
-                    <li>ปัจจุบันศึกษาปริญญาเอก Computer Science ที่ Mahidol University (ทุน TGIST สวทช และทุนตีพิมพ์งานวิจัยด้าน Machine Learning & Explainable AI)</li>
+                    <li>ปัจจุบันกำลังศึกษาปริญญาเอก Computer Science ที่ Mahidol University (ได้รับทุน TGIST สวทช. และทุนตีพิมพ์งานวิจัยด้าน Machine Learning & Explainable AI)</li>
                 </ul>
-                <h5 style="color: #4dd0e1; margin-bottom: 1rem;">📌 แนวทางการสอน</h5>
+                <h5 style="color: #4dd0e1; margin-bottom: 1rem;">📌 สไตล์การสอน</h5>
                 <ul style="margin-bottom: 2rem; line-height: 2;">
-                    <li>ไม่เน้นท่องจำสูตรหรือทริก</li>
-                    <li>ช่วยให้นักเรียนเข้าใจหลักการ อธิบายให้เห็นภาพ เข้าใจง่าย</li>
-                    <li>สามารถประยุกต์ใช้แก้ปัญหาในสถานการณ์จริง</li>
-                    <li>ดูแลนอกเวลาเรียนอย่างต่อเนื่อง</li>
+                    <li>ไม่เน้นการท่องจำสูตรหรือใช้เพียงแค่ทริก แต่เน้นความเข้าใจที่มาที่ไปของหลักการ</li>
+                    <li>อธิบายให้เห็นภาพและเข้าใจง่าย เพื่อให้นักเรียนสามารถนำความรู้ไปประยุกต์ใช้แก้ปัญหาในสถานการณ์จริงได้</li>
+                    <li>ให้คำปรึกษาและดูแลต่อเนื่องนอกเวลาเรียน เพื่อให้นักเรียนมั่นใจในทุกย่างก้าว</li>
                 </ul>
                 <h5 style="color: #4dd0e1; margin-bottom: 1rem;">📍 รูปแบบการสอน</h5>
                 <ul style="margin-bottom: 2rem; line-height: 2;">
-                    <li>ตัวต่อตัว และออนไลน์</li>
-                    <li>เหมาะกับผู้เรียนหลักสูตรไทย/อินเตอร์, นักศึกษาที่ต้องการเพิ่มเกรด, เตรียมสอบเข้าวิศวะ-คอม, หรือเสริมทักษะ Coding, Algorithm, Data Structure</li>
+                    <li>สอนตัวต่อตัว และ ออนไลน์ เพื่อความยืดหยุ่นสูงสุด</li>
+                    <li>เหมาะสำหรับผู้เรียนทั้งหลักสูตรไทยและหลักสูตรอินเตอร์ ไม่ว่าจะเป็นนักศึกษาที่ต้องการเพิ่มเกรด, เตรียมสอบเข้าคณะวิศวะ-คอม, หรือเสริมทักษะด้าน Coding, Algorithm, Data Structure และอื่นๆ</li>
                 </ul>
                 <h5 style="color: #4dd0e1; margin-bottom: 1rem;">🔍 คำค้นหาที่เกี่ยวข้อง</h5>
                 <div style="display: flex; flex-wrap: wrap; gap: 0.7rem 1rem; margin-bottom: 1.5rem;">
@@ -178,7 +173,7 @@
                 </div>
                 <div class="container">
                     <h2 style="color: #ff5252; margin-bottom: 1.2rem;">รายวิชาที่เคยสอน</h2>
-                    <p style="margin-bottom: 1.5rem;">ตัวอย่างรายวิชาที่ผมเคยสอนให้กับนักศึกษามหาวิทยาลัยทั้งในไทยและต่างประเทศ</p>
+                    <p style="margin-bottom: 1.5rem;">นี่คือตัวอย่างรายวิชาที่ปพนธีร์ แย้มโชติ เคยสอนให้กับนักศึกษามหาวิทยาลัยทั้งในและต่างประเทศ:</p>
                     <div id="university-toggle-list">
                         <div class="toggle-item">
                             <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
@@ -263,7 +258,7 @@
     <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
         <div class="container">
             <h2 style="color: #ff5252; margin-bottom: 1.2rem;">ติดต่อสอบถาม</h2>
-            <p style="margin-bottom: 1.5rem;">หากคุณสนใจเรียนกับผม สามารถติดต่อได้ที่:</p>
+            <p style="margin-bottom: 1.5rem;">หากสนใจเรียนกับปพนธีร์ แย้มโชติ สามารถติดต่อได้ที่:</p>
             <ul style="list-style-type: none; padding-left: 0;">
                 <li><b>โทรศัพท์:</b> 0870492475</li>
                 <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
