--- a/TutorContact.html
+++ b/TutorContact.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>ปพนธีร์ แย้มโชติ | ติวเตอร์ Discrete - ติวเตอร์ Discrete Math – Algorithms – Programming (Python | Java | C) ในกรุงเทพฯ</title>
-  <meta name="description"
-        content="เรียน Discrete Mathematics, Data Structures, Algorithms หรือ Python–Java–C กับ ปพนธีร์ แย้มโชติ (เต้ย) ติวเตอร์มหาวิทยาลัยมากประสบการณ์ 10 ปี – สอนตัวต่อตัวและออนไลน์ ในหลักสูตรไทยและอินเตอร์" />
+  <title>ติวเตอร์ Discrete Math, Algorithms, Machine Learning, Data Structures, Programming | ปพนธีร์ แย้มโชติ</title>
+  <meta name="description" content="ติวเตอร์มากประสบการณ์ สอน Discrete Mathematics, Algorithms, Machine Learning, และ Data Science สำหรับนักเรียนไทย-อินเตอร์ เรียนตัวต่อตัวหรือออนไลน์กับ ปพนธีร์ แย้มโชติ (เต้ย)"/>
   <meta name="keywords"
-        content="ติวเตอร์ Discrete Math, ติวเตอร์ Discrete, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
+        content="ติวเตอร์ Discrete Math, ติวเตอร์ Discrete, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, ติวเตอร์ Machine Learning, ติวเตอร์ Data Science, ติวเตอร์ Python, ติวเตอร์ Java, ติวเตอร์ ภาษา C, Phaphontee Yamchote, ปพนธีร์ แย้มโชติ, Machine Learning tutor, Data Science tutor" />
   <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
 
-    <meta property="og:type"        content="profile" />
+  <meta property="og:type"        content="profile" />
   <meta property="og:locale"      content="th_TH" />
   <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
   <meta property="og:title"       content="ปพนธีร์ แย้มโชติ - ติวเตอร์ Discrete Math & Algorithms" />
@@ -115,7 +114,8 @@
     <section id="tutor-contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
         <div class="container">
             <div class="card" style="background: #232323; border-radius: 1rem; padding: 2.5rem; border: none; box-shadow: 0 2px 16px rgba(0,0,0,0.15);">
-                <h2 style="color: #ff5252; margin-bottom: 1.2rem;">ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย</h2>
+                <h1 style="color: #ff5252; margin-bottom: 1.2rem;">ติวเตอร์ Discrete Math, Algorithms, Data Structures, Machine Learning</h1>
+                <h2 style="color: #ffd700; margin-bottom: 1.2rem;">ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย</h2>
                 <h4 style="color: #ffd700; margin-bottom: 1.5rem;">ติวเตอร์มหาวิทยาลัย – ถนัดในการสอน Discrete Mathematics, Data Structures, Algorithms และ Programming (Python, Java, C)</h4>
                 <p style="margin-bottom: 1.5rem;">
                     หากกำลังมองหา ติวเตอร์ Discrete Math ที่ช่วยให้เข้าใจทั้งทฤษฎีและการประยุกต์ใช้จริง หรือกำลังเตรียมสอบวิชาคอมพิวเตอร์ที่สำคัญอย่าง Algorithms, Data Structures, Programming — ปพนธีร์ แย้มโชติ พร้อมช่วยให้ผู้เรียนก้าวข้ามความท้าทายและเข้าใจแนวคิดเหล่านี้ได้อย่างลึกซึ้ง
@@ -262,11 +262,10 @@
             <ul style="list-style-type: none; padding-left: 0;">
                 <li><b>โทรศัพท์:</b> 0870492475</li>
                 <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
+                <li><a href="index.html#resume">ดูประวัติอื่น ๆ เพิ่มเติม</a></li>
             </ul>
         </div>
     </section>
-
-
 
 
     <script src="assets/js/jquery-3.2.1.min.js"></script>
