--- a/TutorContact.html
+++ b/TutorContact.html
@@ -112,7 +112,10 @@
         </div>
     </section>
     <section id="tutor-contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
-        <div class="container">
+        <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
+    <div class="container" style="display: flex; gap: 2rem;">
+        <div style="flex: 3;">
+            <div class="container">
             <div class="card" style="background: #232323; border-radius: 1rem; padding: 2.5rem; border: none; box-shadow: 0 2px 16px rgba(0,0,0,0.15);">
                 <h1 style="color: #ff5252; margin-bottom: 1.2rem;">ติวเตอร์ Discrete Math, Algorithms, Data Structures, Machine Learning</h1>
                 <h2 style="color: #ffd700; margin-bottom: 1.2rem;">ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย</h2>
@@ -251,22 +254,32 @@
                         });
                     });
                 </script>
+                <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
+                    <div class="container">
+                        <h2 style="color: #ff5252; margin-bottom: 1.2rem;">ติดต่อสอบถาม</h2>
+                        <p style="margin-bottom: 1.5rem;">หากสนใจเรียนกับปพนธีร์ แย้มโชติ สามารถติดต่อได้ที่:</p>
+                        <ul style="list-style-type: none; padding-left: 0;">
+                        <li><b>โทรศัพท์:</b> 0870492475</li>
+                        <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
+                        <li><a href="index.html#resume">ดูประวัติอื่น ๆ เกี่ยวกับการทำงานเพิ่มเติม</a></li>
+                        </ul>
+                    </div>
+                </section>
             </div>
         </div>
-    </section>
-
-    <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
-        <div class="container">
-            <h2 style="color: #ff5252; margin-bottom: 1.2rem;">ติดต่อสอบถาม</h2>
-            <p style="margin-bottom: 1.5rem;">หากสนใจเรียนกับปพนธีร์ แย้มโชติ สามารถติดต่อได้ที่:</p>
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li><b>โทรศัพท์:</b> 0870492475</li>
-                <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
-                <li><a href="index.html#resume">ดูประวัติอื่น ๆ เพิ่มเติม</a></li>
-            </ul>
         </div>
+        <div style="flex: 1; min-width: 260px;">
+            <iframe src="https://script.google.com/macros/s/AKfycbxbfm_o4uh6uGYPF07qCPl_3xU0WBxaeXlJFQVyaFJKSLBoGYhALu1DxlakRggH8YSg6w/exec"
+                width="100%" height="850" style="border:none; border-radius: 1rem; background: #fff;"></iframe>
+        </div>
+    </div>
+</section>
+
     </section>
 
+    
+
+    
 
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
