--- a/Teaching.html
+++ b/Teaching.html
@@ -168,6 +168,21 @@
                                         <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
                                         <li><b>ครั้งที่ 8 (21 กันยายน)</b> : ทบทวนก่อนสอบ (08:00 - 11:00) + <span style="color: red;">สอบปลายภาค</span></li>
                                     </ul>
+                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        การประเมินผล
+                                    </h4>
+                                    <ul style="padding-bottom: 24px;">
+                                        <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
+                                        <li>สอบกลางภาค (20%)</li>
+                                        <li>สอบปลายภาค (40%)</li>
+                                        <li>คะแนนเก็บ (40%)</li>
+                                            <ul style="padding-left: 25px;">
+                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
+                                                <li>การบ้าน (14%): 7 ครั้ง ส่งออนไลน์</li>
+                                                <li>สอบย่อย (15%): 5 ครั้งครั้งละ 20 นาที (การเรียนครั้งที่ 2, 3, 5, 6, 7 ออกคล้ายการบ้าน 1 คะแนนเข้าสอบ + 2 คะแนนจากคำตอบ)</li>
+                                                <li>งานกลุ่ม (11%): ประกาศโจทย์หลังจบครั้งที่ 7 -> ให้ปรึกษาในครั้งที่ 8 -> ส่ง 21 ตุลาคม</li>
+                                            </ul>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -204,8 +219,7 @@
         </div>
     </div>
 </section>
-
-    </section>
+</section>
 
     
 
