--- a/Teaching.html
+++ b/Teaching.html
@@ -138,51 +138,18 @@
                             </button>
                             <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
                                 <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
-                                    <p style="padding-bottom: 24px;">
-                                        Block 1 ภาคต้น ปีการศึกษา 2568. อาทิตย์ 08:00 - 13:35 (room: TBA).
-                                    </p>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         คำอธิบายรายวิชา
                                     </h4>
                                     <p style="padding-bottom: 24px;">
                                         แนวคิดและกระบวนการตัดสินใจภายใต้เทคนิคการวิเคราะห์เชิงปริมาณทางธุรกิจ ความน่าจะเป็น ทฤษฎีการตัดสินใจ การโปรแกรมเชิงเส้น การวิเคราะห์มาร์คอฟ ทฤษฎีการแข่งขัน การวิเคราะห์แถวคอย การจำลองสถานการณ์ และการพยากรณ์ รวมถึงการนำโปรแกรมสำเร็จรูปมาใช้ประมวลผลลัพธ์
                                     </p>
-                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
-                                        เอกสารประกอบการสอน
-                                    </h4>
-                                    <ul style="padding-bottom: 24px;">
-                                        <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><a href="assets/handout/Quantitative_Analysis Chap 1-3.pdf" target="_blank">หนังสือ</a> (update at 28 July 2025)</li>
-                                    </ul>
-                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
-                                        ตารางสอน
-                                    </h4>
-                                    <ul style="padding-bottom: 24px;">
-                                        <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><b>ครั้งที่ 1 (3 สิงหาคม)</b> : แนวคิดพื้นฐานการวิเคราะห์เชิงปริมาณเพื่อการตัดสินใจเชิงธุรกิจ, กำหนดการเชิงเส้น (Linear Programming)</li>
-                                        <li><b>ครั้งที่ 2 (10 สิงหาคม)</b> : ทฤษฎีการตัดสินใจ (Decision Theory) [Hybrid]</li>
-                                        <li><b>ครั้งที่ 3 (17 สิงหาคม)</b> : การจำลองสถานการณ์ (Simulation Modeling)</li>
-                                        <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Hybrid]</li>
-                                        <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
-                                        <li><b>ครั้งที่ 6 (7 กันยายน)</b> : การทำนาย (Forecasting)</li>
-                                        <li><b>ครั้งที่ 7 (14 กันยายน)</b> : ทฤษฎีแถวคอย (Queue Theory)</li>
-                                        <li><b>ครั้งที่ 8 (21 กันยายน)</b> : ทบทวนก่อนสอบ (08:00 - 11:00) + <span style="color: red;">สอบปลายภาค</span></li>
-                                    </ul>
-                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
-                                        การประเมินผล
-                                    </h4>
-                                    <ul style="padding-bottom: 24px;">
-                                        <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li>สอบกลางภาค (20%)</li>
-                                        <li>สอบปลายภาค (40%)</li>
-                                        <li>คะแนนเก็บ (40%)</li>
-                                            <ul style="padding-left: 25px;">
-                                                <!-- <li>การเข้าชั้นเรียน (8%): ถ้าไม่มีสอบย่อยเช็คชื่อเข้าเรียนตอน 08:30, ถ้ามีสอบย่อยนับ</li> -->
-                                                <li>การบ้าน (14%): 7 ครั้ง ส่งออนไลน์</li>
-                                                <li>สอบย่อย (15%): 5 ครั้งครั้งละ 20 นาที (การเรียนครั้งที่ 2, 3, 5, 6, 7 ออกคล้ายการบ้าน 1 คะแนนเข้าสอบ + 2 คะแนนจากคำตอบ)</li>
-                                                <li>งานกลุ่ม (11%): ประกาศโจทย์หลังจบครั้งที่ 7 -> ให้ปรึกษาในครั้งที่ 8 -> ส่ง 21 ตุลาคม</li>
-                                            </ul>
-                                    </ul>
+
+                                    <p style="padding-bottom: 24px;">
+                                        <a href="teaching/720201-B1-1-2568.html" target="_blank">Block 1 ภาคต้น ปีการศึกษา 2568</a> (2 ส.ค. 2568 - 21 ก.ย. 2568). อาทิตย์ 08:00 - 13:35 (room: 507 อาคาร อาคารสนง.อธิการบดี).
+                                    </p>
+                                    
+                                
                                 </div>
                             </div>
                         </div>
