--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                                             GitHub
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="teaching.html" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            Teaching@SAU
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                             <div onclick="show_menu()" class="my-toogle" style="position: fixed;">
