--- a/index.html
+++ b/index.html
@@ -61,12 +61,9 @@
             <section id="home">
                 <header >
                     <div class="container">
-                        <div class="main-nav">
-                            <div class="logo">
-                                <h2>Toey</h2>
-                            </div>
-                            <div class="social-media">
-                                <ul>
+                        <div class="main-nav" >
+                            <div class="social-media" >
+                                <ul style="display: flex; justify-content: space-between; align-items: center;">
                                     <li>
                                         <a href="https://linkedin.com/in/phaphontee-yamchote" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
                                             LinkedIn
