--- a/teaching.html
+++ b/teaching.html
@@ -160,7 +160,19 @@
                             </button>
                             <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
                                 <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
-                                    <p>แนะนำเทคโนโลยีสารสนเทศที่ใช้ในธุรกิจ เช่น ระบบฐานข้อมูล การจัดการข้อมูล และการวิเคราะห์ข้อมูล</p>
+                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        คำอธิบายรายวิชา
+                                    </h4>
+                                    <p style="padding-bottom: 24px;">
+                                        ...
+                                    </p>
+
+                                    <p style="padding-bottom: 24px;">
+                                        <a href="teaching/720401-B3-1-2568.html" target="_blank" style="pointer-events: none; color: #aaa;">Block 3 ภาคต้น ปีการศึกษา 2568</a> (....). อาทิตย์ TBA (room: TBA)<br>
+                                        <a href="teaching/720401-Z-1-2568.html" target="_blank" style="pointer-events: none; color: #aaa;">เรียนล่วงหน้า ภาคต้น ปีการศึกษา 2568</a> (7 มิ.ย. 2568 - 27 ก.ค. 2568). อาทิตย์ 08:00 - 13:35 (room: IT309)
+                                    </p>
+                                    
+                                
                                 </div>
                             </div>
                         </div>
