--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -105,8 +105,7 @@
             <p style="color: white; margin-bottom: 1.5rem;">Faculty of Business Administration, Southeast Asia University</p>
         </div>
     </section>
-    <section id="tutor-contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
-        <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
+    <section id="course-description" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
     <div class="container" style="display: flex; gap: 2rem;">
         <div style="flex: 3;">
             <div class="container">
