--- a/teaching.html
+++ b/teaching.html
@@ -164,7 +164,12 @@
                                         คำอธิบายรายวิชา
                                     </h4>
                                     <p style="padding-bottom: 24px;">
-                                        ...
+                                        ความรู้เบื้องต้นเกี่ยวกับระบบสารสนเทศ บทบาท รูปแบบ และองค์ประกอบของระบบสารสนเทศ
+                                        ในองค์การธุรกิจ ประเภทและวิธีการประมวลผลข้อมูล การประยุกต์ใช้เทคโนโลยีสารสนเทศในการจัดเก็บ การ
+                                        เข้าถึงการประมวลผลและการควบคุมเทคโนโลยีสารสนเทศที่ใช้ในการบริหารจัดการ ระบบงานทางธุรกิจ และ
+                                        ทักษะการใช้เทคโนโลยีสารสนเทศโดยสามารถบูรณาการในบทบาทของผู้ประเมิน ผู้ออกแบบระบบสารสนเทศ 
+                                        และการใช้ซอฟต์แวร์สำเร็จรูปเพื่อสนับสนุนการวางแผนและตัดสินใจในการดำเนินการธุรกิจดิจิทัลภายใต้
+                                        สภาพแวดล้อมที่เปลี่ยนแปลง
                                     </p>
 
                                     <p style="padding-bottom: 24px;">
