--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -65,6 +65,14 @@
 </head>
 
 <body>
+    <style>
+        :root {
+            --darkblue: #002147;
+            --gold: #FFD700;
+            --light-bg: #f4f4f4;
+            --text-dark: #232323;
+        }
+    </style>
     <div id="show_menuitems" class="my-menu">
         <div class="menu-box">
             <span>
@@ -96,11 +104,11 @@
         </header>
     </section>
 
-    <section id="about" style="background-color: rgb(0, 0, 0); padding: 0.7rem 0;">
+    <section id="about" style="background-color: var(--darkblue); padding: 0.7rem 0;">
         <div class="container">
-            <h1 style="color: red">720201 - Quantitative Analysis for Business</h1>
-            <h4 style="color: red">Block 1 ภาคต้น ปีการศึกษา 2568 (2 ส.ค. 2568 - 21 ก.ย. 2568)</h4>
-            <h4 style="color: red; margin-bottom: 1.2rem;">อาทิตย์ 08:00 - 13:35 (room: 507 อาคาร อาคารสนง.อธิการบดี)</h4>
+            <h1 style="color: var(--gold)">720201 - Quantitative Analysis for Business</h1>
+            <h4 style="color: var(--gold)">Block 1 ภาคต้น ปีการศึกษา 2568 (2 ส.ค. 2568 - 21 ก.ย. 2568)</h4>
+            <h4 style="color: var(--gold); margin-bottom: 1.2rem;">อาทิตย์ 08:00 - 13:35 (room: 507 อาคาร อาคารสนง.อธิการบดี)</h4>
             <p style="color: white">การวิเคราะห์เชิงปริมาณทางธุรกิจ</p>
             <p style="color: white; margin-bottom: 1.5rem;">Faculty of Business Administration, Southeast Asia University</p>
         </div>
