--- a/teaching.html
+++ b/teaching.html
@@ -65,6 +65,14 @@
 </head>
 
 <body>
+    <style>
+        :root {
+            --darkblue: #002147;
+            --gold: #FFD700;
+            --light-bg: #f4f4f4;
+            --text-dark: #232323;
+        }
+    </style>
     <div id="show_menuitems" class="my-menu">
         <div class="menu-box">
             <span>
@@ -90,17 +98,17 @@
                     <div class="social-media">
                                 <ul>
                                     <li>
-                                        <a href="https://linkedin.com/in/phaphontee-yamchote" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                        <a href="https://linkedin.com/in/phaphontee-yamchote" class="btn btn-danger" style="background: var(--darkblue); color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em; border: 0.5px solid var(--gold);">
                                             LinkedIn
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="TutorContact.html" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                        <a href="TutorContact.html" class="btn btn-danger" style="background: var(--darkblue); color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em; border: 0.5px solid var(--gold);">
                                             Tutor Page
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/yamchote-ppt" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                        <a href="https://github.com/yamchote-ppt" class="btn btn-danger" style="background: var(--darkblue); color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em; border: 0.5px solid var(--gold);">
                                             GitHub
                                         </a>
                                     </li>
@@ -114,9 +122,9 @@
         </header>
     </section>
 
-    <section id="about" style="background-color: rgb(0, 0, 0); padding: 0.7rem 0;">
+    <section id="about" style="background-color: var(--darkblue); padding: 0.7rem 0;">
         <div class="container">
-            <h1 style="color: red; margin-bottom: 1.2rem;">Teaching Page</h1>
+            <h1 style="color: gold; margin-bottom: 1.2rem;">Teaching@SAU</h1>
             <p style="color: white">ปพนธีร์ แย้มโชติ</p>
             <p style="color: white; margin-bottom: 1.5rem;">Department of Information Systems for Digital Business, Southeast Asia University</p>
         </div>
@@ -129,10 +137,10 @@
             <div class="card" style="background: #232323; border-radius: 1rem; padding: 2.5rem; border: none; box-shadow: 0 2px 16px rgba(0,0,0,0.15);">
                 
                 <div class="container">
-                    <h2 style="color: #ff5252; margin-bottom: 1.2rem;">รายวิชาที่สอนในภาคการศึกษานี้</h2>
+                    <h2 style="color: var(--gold); margin-bottom: 1.2rem;">รายวิชาที่สอนในภาคการศึกษานี้</h2>
                     <div id="university-toggle-list">
                         <div class="toggle-item">
-                            <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                            <button class="toggle-btn" type="button" style="background:var(--darkblue);color:var(--gold);border: 0.5px solid var(--gold);font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
                                 <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
                                 720201 - Quantitative Analysis for Business
                             </button>
@@ -154,7 +162,7 @@
                             </div>
                         </div>
                         <div class="toggle-item">
-                            <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                            <button class="toggle-btn" type="button" style="background:var(--darkblue);color:var(--gold);border: 0.5px solid var(--gold);font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
                                 <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
                                 720401 - Information Technology for Business
                             </button>
