--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -118,6 +118,14 @@
         <div style="flex: 3;">
             <div class="container">
                 <div class="container" style="background: #fff; border-radius: 0.7rem; padding: 1.5rem; color: #232323;">
+                                    <h5 style="color: #ff0000; margin-bottom: 0.5rem; border-left: 4px solid #ff0000;background-color: #fcc6c6; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        ประกาศ
+                                    </h5>
+                                    <p style="padding-bottom: 24px; color: #ff0000">
+                                        <b>วันอาทิตย์ที่ 10 สิงหา</b> เรียน Hybrid มีทั้ง online และ on-site ที่ห้องเดิม<br>
+                                        ต้นคาบ 8:10 - 8:30 <b>มี quiz</b> ทำในออนไลน์ (ผ่านมือถือได้) ออกคล้ายการบ้าน 1 แบบมีส่วนที่ทำมาให้แล้ว แค่เติมตัวเลขลงไปในช่องสี่เหลี่ยม<br>
+                                    </p>
+
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         คำอธิบายรายวิชา
                                     </h4>
@@ -136,8 +144,8 @@
                                     </h4>
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><b>ครั้งที่ 1 (3 สิงหาคม)</b> : แนวคิดพื้นฐานการวิเคราะห์เชิงปริมาณเพื่อการตัดสินใจเชิงธุรกิจ, กำหนดการเชิงเส้น (Linear Programming)</li>
-                                        <li><b>ครั้งที่ 2 (10 สิงหาคม)</b> : ทฤษฎีการตัดสินใจ (Decision Theory) [Hybrid]</li>
+                                        <li><b>ครั้งที่ 1 (3 สิงหาคม)</b> : <span style="text-decoration: line-through;">แนวคิดพื้นฐานการวิเคราะห์เชิงปริมาณเพื่อการตัดสินใจเชิงธุรกิจ,</span> กำหนดการเชิงเส้น (Linear Programming) Part 1 (การเขียนโมเดล และการแก้ปัญหาด้วยรูปภาพ) <a href="../assets/handout/Quantitative_Analysis_250803.pdf">Note</a></li>
+                                        <li><b>ครั้งที่ 2 (10 สิงหาคม)</b> : LP Part 2 (Simplex method), ทฤษฎีการตัดสินใจ (Decision Theory) [Hybrid]</li>
                                         <li><b>ครั้งที่ 3 (17 สิงหาคม)</b> : การจำลองสถานการณ์ (Simulation Modeling)</li>
                                         <li><b>ครั้งที่ 4 (24 สิงหาคม)</b> : <span style="color: red;">สอบกลางภาค (ตอนเช้า)</span> + การวิเคราะห์มาร์คอฟ (Markov Analysis) [Hybrid]</li>
                                         <li><b>ครั้งที่ 5 (31 สิงหาคม)</b> : ทฤษฎีการแข่งขัน (Game Theory)</li>
@@ -159,6 +167,13 @@
                                                 <li>สอบย่อย (15%): 5 ครั้งครั้งละ 20 นาที (การเรียนครั้งที่ 2, 3, 5, 6, 7 ออกคล้ายการบ้าน <span style="color: red;">ให้ 1 คะแนนเข้าสอบ + 2 คะแนนจากความถูกต้อง</span>)</li>
                                                 <li>งานกลุ่ม (11%): ประกาศโจทย์หลังจบครั้งที่ 7 -> ให้ปรึกษาในครั้งที่ 8 -> ส่ง 21 ตุลาคม</li>
                                             </ul>
+                                    </ul>
+                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        การบ้าน
+                                    </h4>
+                                    <ul style="padding-bottom: 24px;">
+                                        <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
+                                        <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.)</li>
                                     </ul>
                                 </div>
             </div>
