--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -122,7 +122,7 @@
                                         ประกาศ
                                     </h5>
                                     <p style="padding-bottom: 24px; color: #ff0000">
-                                        <b>วันอาทิตย์ที่ 10 สิงหา</b> เรียน Hybrid มีทั้ง online และ on-site ที่ห้องเดิม<br>
+                                        <b>วันอาทิตย์ที่ 10 สิงหา</b> เรียน online อย่างเดียว (เนื่องจากทางมหาวิทยาลัยปิดตึก)<br>
                                         ต้นคาบ 8:10 - 8:30 <b>มี quiz</b> ทำในออนไลน์ (ผ่านมือถือได้) ออกคล้ายการบ้าน 1 แบบมีส่วนที่ทำมาให้แล้ว แค่เติมตัวเลขลงไปในช่องสี่เหลี่ยม<br>
                                     </p>
 
