--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -175,6 +175,13 @@
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.)</li>
                                     </ul>
+                                    <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
+                                        วิดีโอเรียนเพิ่มเติม
+                                    </h4>
+                                    <ul style="padding-bottom: 24px;">
+                                        <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
+                                        <li> - <a href="https://www.youtube.com/watch?v=5eGSsYbCywo">คณิตศาสตร์ (1) การวาดเส้นตรงจากสมการเส้นตรง</a></li>
+                                    </ul>
                                 </div>
             </div>
         </div>
