--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -181,6 +181,7 @@
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
                                         <li> - <a href="https://www.youtube.com/watch?v=5eGSsYbCywo">คณิตศาสตร์ (1) การวาดเส้นตรงจากสมการเส้นตรง</a></li>
+                                        <li> - <a href="https://www.youtube.com/watch?v=ftTM9zZ8yr8">คณิตศาสตร์ (2) การแก้ระบบสมการเชิงเส้นหาจุดตัดระหว่างเส้นตรง</a></li>
                                     </ul>
                                 </div>
             </div>
