--- a/teaching/720201-B1-1-2568.html
+++ b/teaching/720201-B1-1-2568.html
@@ -173,7 +173,7 @@
                                     </h4>
                                     <ul style="padding-bottom: 24px;">
                                         <!-- <li><a href="https://example.com/quantitative-analysis-syllabus.pdf" target="_blank">Syllabus</a></li> -->
-                                        <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.)</li>
+                                        <li><b>การบ้าน 1</b>: การเขียนแบบจำลอง และแก้ปัญหาโจทย์ 1.1.3 และโจทย์ Assignment (due date 9 สิงหาคม 23:59 น.) <span style="color: rgb(179, 179, 179)">(เฉลย)</span></li>
                                     </ul>
                                     <h4 style="color: #000000; margin-bottom: 0.5rem; border-left: 4px solid #aaa;background-color: #f4f4f4; padding-left: 8px; padding-top: 10px;padding-bottom: 8px;">
                                         วิดีโอเรียนเพิ่มเติม
